// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Filters Component render filters as closed 1`] = `
<ng-component
  __ngContext__={[Function LRootView]}
  filterItems={[Function Array]}
  isOpen="false"
>
  <cdx-search-filters
    class="ng-tns-c29-0"
  >
    <h3
      class="heading--4 ng-tns-c29-0"
    >
       Categories 
    </h3>
    <div
      class="filtersContent ng-tns-c29-0 ng-trigger ng-trigger-openClose"
      style="height:0px;0:height;"
    >
      <div
        class="ng-star-inserted"
        style=""
      >
        Bakery (2)
      </div>
      <div
        class="ng-star-inserted"
        style=""
      >
        Seafood (92)
      </div>
      <div
        class="ng-star-inserted"
        style=""
      >
        Baby Care(10)
      </div>
      <div
        class="ng-star-inserted"
        style=""
      >
        Baking & Cooking (103)
      </div>
      <div
        class="ng-star-inserted"
        style=""
      >
        Drinks- Hot & Cold(29)
      </div>
      
    </div>
  </cdx-search-filters>
</ng-component>
`;

exports[`Search Filters Component render filters as open 1`] = `
<ng-component
  __ngContext__={[Function LRootView]}
  filterItems={[Function Array]}
  isOpen={[Function Boolean]}
>
  <cdx-search-filters
    class="ng-tns-c29-0"
  >
    <h3
      class="heading--4 ng-tns-c29-0"
    >
       Categories 
    </h3>
    <div
      class="filtersContent ng-tns-c29-0 ng-trigger ng-trigger-openClose"
      style="height:0px;0:height;"
    >
      <div
        class="ng-star-inserted"
        style=""
      >
        Bakery (2)
      </div>
      <div
        class="ng-star-inserted"
        style=""
      >
        Seafood (92)
      </div>
      <div
        class="ng-star-inserted"
        style=""
      >
        Baby Care(10)
      </div>
      <div
        class="ng-star-inserted"
        style=""
      >
        Baking & Cooking (103)
      </div>
      <div
        class="ng-star-inserted"
        style=""
      >
        Drinks- Hot & Cold(29)
      </div>
      
    </div>
  </cdx-search-filters>
</ng-component>
`;
